Fix preview buttons visible on draft mode

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -114,6 +114,9 @@
   .toggle-preview {
     display: none;
   }
+  .draft .top-bar-preview {
+    display: none;
+  }
 }
 
 @if $clean_composer_style == 'true' {
